# movie_recommend_system_demo

./: .gitignore  README.md  airflow.cfg  airflow_variables.json  main.py  pyproject.toml  requirements.txt
airflow/dags/: dag_generate_recommendations.py  dag_hello.py  dag_ingest_ratings.py  dag_itemcf.py  dag_popularity.py  dag_test_db.py  dag_train_als.py  recommender_pipeline.py
configs/: airflow.yaml
src/common/: db.py
src/evaluation/: evaluate_als.py  evaluate_itemcf.py  evaluate_models.py  evaluate_popularity.py  metrics.py  split.py
src/ingestion/: eda_ratings.py  export_ratings_to_parquet.py  filter_ratings.py  load_ratings.py
src/jobs/: generate_als_recommendations.py  generate_itemcf_recommendations.py  generate_popularity_recommendations.py
src/serving/: als_inference.py  itemcf_inference.py  popularity_inference.py  recommend_service.py  routing.py  write_recommendations.py
src/training/: als_trainer.py  itemcf.py  itemcf_similarity.py  popularity.py
tests/: test_als_write.py  test_db.py  test_filter_ratings.py  test_itemcf_inference.py  test_itemcf_write.py  test_load_ratings.py  test_popularity_write.py  test_recommend_service.py  test_routing.py
