[project]
name = "movie-recommend-system-3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "apache-airflow",

    # pandas compatible with Airflow
    "pandas>=1.5,<2.0",

    # numpy compatible with pandas 1.5
    "numpy>=1.23,<2.0",

    # DB
    "sqlalchemy>=1.4.54,<2.0",
    "psycopg2-binary==2.9.11",

    "pyarrow>=15.0.0",
    "pyyaml>=6.0",
]
[tool.setuptools.packages.find]
where = ["src"]